# object_manipulation_miniproject

./: README.md  cam1_color_camera_info.txt  start_two_d435.sh
mia_hand_ros2_pkgs/: .gitignore
mia_hand_ros2_pkgs/dev/grasp_preshaping/: Cargo.toml  README.md
mia_hand_ros2_pkgs/dev/grasp_preshaping/data/: cyllinder.xyz  finger_tip_lut.npz  sphere.xyz
mia_hand_ros2_pkgs/dev/grasp_preshaping/scripts/: README.md  hand_tip_visualizer.py  model.py  verify_lut.py
mia_hand_ros2_pkgs/dev/grasp_preshaping/src/: lib.rs  lut_helper.rs  main.rs  planner.rs  pointcloud_helper.rs  ros_command_helper.rs
mia_hand_ros2_pkgs/dev/grasp_preshaping/urdf/: mia_hand_flat.urdf  top.urdf.xacro
mia_hand_ros2_pkgs/dev/mujoco/scenes/: mia_hand_right_grasp_frame.xml  scene_right_custom.xml
mia_hand_ros2_pkgs/docker-deployment/: Dockerfile  docker-compose.yml
mia_hand_ros2_pkgs/mia_hand_mujoco/: CMakeLists.txt  package.xml
mia_hand_ros2_pkgs/mia_hand_mujoco/launch/: mia_hand_system_interface_launch.py
mia_hand_ros2_pkgs/mia_hand_mujoco/scripts/: mujoco_depth_publisher_node.py
multiview/: charuco_tf_node.py  make_charuco_a4.py  two_d435_test.rviz
multiview/intrinsics/: cam2_color_camera_info.txt
