[package]
name = "preshaping"
version = "0.1.0"
edition = "2024"

[dependencies]
npyz = { version = "0.8", features = ["npz"] }
nalgebra = "0.32"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 8
panic = "abort"
strip = "symbols"